--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slojekt</title>
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
     <div id="multiplier-text">1.00x</div>
