bef ygoak basztam

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slojekt</title>
+    <title>slo prodszekt</title>
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-    <div id="multiplier-text">1.00x</div>
+    <div id=" Multiplier_Insert"></div>
+    <div id="Animation_Placeholder"></div>
+    <!-- hátérpékpé -->
+    megy a carash
+    legyünk szeremncsesek
 
     <script type="module" src="script.js"></script>
  </body>
