--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-    <div id=" Multiplier_Insert"></div>
-    <div id="Animation_Placeholder"></div>
-    <!-- hátérpékpé -->
-    megy a carash
-    legyünk szeremncsesek
+   <div id="multiplier-text">1.00x</div>
+   <div>Tét: <input type="number" id="bet-value"></div>
+   <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
+   <div><button id="bet-button">Fogadás</button></div>
 
-    <script type="module" src="script.js"></script>
+   
+
+   <div>Egyenleg: <span id="balance-text">0 Ft</span></div>
+
+   <canvas id="cvs"></canvas>
+
+   <script type="module" src="script.js"></script>
  </body>
  </html>
