--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
    <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
    <div><button id="bet-button">Fogadás</button></div>
 
-   
-
    <div>Egyenleg: <span id="balance-text">0 Ft</span></div>
 
-   <canvas id="cvs"></canvas>
+   <div>Végeredmény: <span id="outcome-text"></span></div>
+
+   <canvas id="cvs" width ="600" height="600"></canvas>
 
    <script type="module" src="script.js"></script>
  </body>
