--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
    <canvas id="cvs" width ="600" height="600"></canvas>
 
    <script type="module" src="script.js"></script>
+   <div class="gold-coin">
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+    <img src="/images/gold_coin.png"> 
+   </div>
    <div id="BadLuck">CURSE OF RA 𓀀 𓀁 𓀂 𓀃 𓀄 𓀅 𓀆 𓀇 𓀈 𓀉 𓀊 𓀋 𓀌 𓀍 𓀎 𓀏 𓀐 𓀑 𓀒 𓀓 𓀔 𓀕 𓀖 𓀗 𓀘 𓀙 𓀚 𓀛 𓀜 𓀝 𓀞 𓀟 𓀠 𓀡 𓀢 𓀣 𓀤 𓀥 𓀦 𓀧 𓀨 𓀩 𓀪 𓀫 𓀬 𓀭 𓀮 𓀯 𓀰 𓀱 𓀲 𓀳 𓀴 𓀵 𓀶 𓀷 𓀸 𓀹 𓀺 𓀻 𓀼 𓀽 𓀾 𓀿 𓁀 𓁁 𓁂 𓁃 𓁄 𓁅 𓁆 𓁇 𓁈 𓁉 𓁊 𓁋 𓁌 𓁍 𓁎 𓁏 𓁐 𓁑 𓀄 𓀅 𓀆 𓀇 𓀈 𓀉 𓀊</div>
  </body>
 </html>
