--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
    </div>
    
    <canvas id="cvs" width ="600" height="600"></canvas>
+   <div class="GoldCoinSpin">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+    <img src="images/gold_coin.png" alt="">
+   </div>
 
    <script type="module" src="script.js"></script>
    <div class="BadLuck">
