--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-   <div id="multiplier-text">1.00x</div>
-   <div id="Bottom-Button">
-    <div>Tét: <input type="number" id="bet-value"></div>
-    <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
-    <div><button id="bet-button">Fogadás</button></div>
-   </div>
+   <!-- <div id="multiplier-text">1.00x</div> -->
+      <div id="Bottom-Button">
+          <div>Tét: <input type="number" id="bet-value"></div>
+          <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
+      <div><button id="bet-button">Fogadás</button></div>
+   </div> 
 
    <div id="Top-Button">
     <div>Egyenleg: <span id="balance-text">0 Ft</span></div>
-    <div>Végeredmény: <span id="outcome-text"></span></div> 
-   </div>
+    <!-- <div>Végeredmény: <span id="outcome-text"></span></div>  -->
+   </div> 
    
    <canvas id="cvs" width ="600" height="600"></canvas>
-   <div class="GoldCoinSpin">
+   <!-- <div class="GoldCoinSpin">
     <img src="images/gold_coin.png" alt="">
     <img src="images/gold_coin.png" alt="">
     <img src="images/gold_coin.png" alt="">
@@ -28,15 +28,18 @@
     <img src="images/gold_coin.png" alt="">
     <img src="images/gold_coin.png" alt="">
     <img src="images/gold_coin.png" alt="">
-   </div>
+   </div> -->
+
+
+   <table id="prev-games-ul"></table>
 
    <script type="module" src="script.js"></script>
-   <div class="BadLuck">
+   <!-- <div class="BadLuck">
     <p id="CurseOfRa">
       CURSE OF RA 𓀀 𓀁 𓀂 𓀃 𓀄 𓀅 𓀆 𓀇 𓀈 𓀉 𓀊 𓀋 𓀌 𓀍 𓀎 𓀏 𓀐 𓀑 𓀒 𓀓 𓀔 𓀕 𓀖 𓀗 𓀘 𓀙 𓀚 𓀛 𓀜 𓀝 𓀞 𓀟 𓀠 𓀡 𓀢 𓀣 𓀤 𓀥 𓀦 𓀧 𓀨 𓀩 𓀪 𓀫 𓀬 𓀭 𓀮 𓀯 𓀰 𓀱 𓀲 𓀳 𓀴 𓀵 𓀶 𓀷 𓀸 𓀹 𓀺 𓀻 𓀼 𓀽 𓀾 𓀿 𓁀 𓁁 𓁂 𓁃 𓁄 𓁅 𓁆 𓁇 𓁈 𓁉 𓁊 𓁋 𓁌 𓁍 𓁎 𓁏 𓁐 𓁑 𓀄 𓀅 𓀆 𓀇 𓀈 𓀉 𓀊
     </p>
     <img class="BadLuck" id="BadLuckStock" src="images/stock_crash_bad_luck.png" alt="">
     <img class="BadLuck" id="BadLuckCat" src="images/chinese_luckbringer_cat.png" alt="">
-  </div>
+  </div> -->
  </body>
 </html>
