nagyobb eséllyel crashel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <div id="Top-Button">
     <div>Egyenleg: <span id="balance-text">0 Ft</span></div>
-    <div>Végeredmény: <span id="outcome-text"></span></div> 
+    <!-- <div>Végeredmény: <span id="outcome-text"></span></div>  -->
    </div> 
    
    <canvas id="cvs" width ="600" height="600"></canvas>
