el lehet adni tárgyakat

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-   <div id="multiplier-text">1.00x</div>
+   <!-- <div id="multiplier-text">1.00x</div> -->
       <div id="Bottom-Button">
           <div>Tét: <input type="number" id="bet-value"></div>
           <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
@@ -41,5 +41,9 @@
     <img id="BadLuckStock" src="images/stock_crash_bad_luck.png" alt="">
     <img id="BadLuckCat" src="images/chinese_luckbringer_cat.png" alt="">
   </div>
+
+
+  <div id="items-holder"></div>
+
  </body>
 </html>
