képek a tárgyak mögött

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
  <body>
    <!-- <div id="multiplier-text">1.00x</div> -->
       <div id="Bottom-Button">
-          <div>Tét: <input type="number" id="bet-value"></div>
-          <div>Auto cashout: <input type="number" id="auto-cashout-value"></div>
-      <div><button id="bet-button">Fogadás</button></div>
+          <div id="tet-div">Tét: <input type="number" id="bet-value"></div>
+          <div id="auto-cashout-div">Auto cashout: <input type="number" id="auto-cashout-value"></div>
+      <div id="bet-button-div"><button id="bet-button">Fogadás</button></div>
    </div> 
 
    <div id="Top-Button">
@@ -43,7 +43,9 @@
   </div>
 
 
-  <div id="items-holder"></div>
+  <div id="items-holder">
+    <h1>Kifogytál a pénzből?</h1>
+  </div>
 
  </body>
 </html>
